k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    app: portfolio
spec:
  type: LoadBalancer
  selector:
    app: portfolio
  ports:
  - name: http
    port: 80
    targetPort: 6969
    protocol: TCP
  sessionAffinity: None
